Cricket therm version 0.93